# squidmaster

./: CMakeLists.txt
flac/: 442Hz-1s.flac  442Hz-5s.flac
squidjack/: CMakeLists.txt  client.cpp  client.hpp
squidpod/: CMakeLists.txt  basic_analysis.hpp  basic_transform.hpp  common.hpp  entry.cpp.cpp  stream.hpp  throwables.hpp  waveform.hpp  waveform_loader.hpp  waveform_types.hpp
tools/: CMakeLists.txt  flactrans_main.cpp
